--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,30 +30,59 @@ set(ABSTRACT_SRC
         src/abstract/sniffer/basic_sniff_handler.h
 )
 
-set(PROTOCOLS_SRC
+set(PROT_ETHER2_SRC
         src/protocols/ether2/ethernet2_protocol.cpp
         src/protocols/ether2/ethernet2_header.cpp
         src/protocols/ether2/mac_addr.cpp
+        src/protocols/ether2/ethertype.cpp
+)
 
+set(PROT_ARP_SRC
+        src/protocols/arp/arp_header.cpp
+        src/protocols/arp/arp_protocol.cpp
+)
+
+set(PROT_IP4_SRC
         src/protocols/ip4/ip4_protocol.cpp
         src/protocols/ip4/ip4_addr.cpp
         src/protocols/ip4/internet_checksum.cpp
         src/protocols/ip4/ip4_header.cpp
-
-        src/protocols/tcp/tcp_protocol.cpp
-        src/protocols/tcp/tcp_session.cpp
-        src/protocols/tcp/tcp_boundary_preserving_session.cpp
-
-        src/protocols/udp/udp_protocol.cpp
-        src/protocols/udp/udp_header.cpp
-
-        src/protocols/icmp/icmp_protocol.cpp
-        src/protocols/icmp/icmp_header.cpp
-
-        src/protocols/emp/emp_protocol.cpp
 )
 
-set(LINUX_SRC
+set(PROT_ICMP_SRC
+        src/protocols/icmp/icmp_protocol.cpp
+        src/protocols/icmp/icmp_header.cpp
+)
+
+# set(PROTOCOLS_SRC
+#         src/protocols/ether2/ethernet2_protocol.cpp
+#         src/protocols/ether2/ethernet2_header.cpp
+#         src/protocols/ether2/mac_addr.cpp
+
+#         src/protocols/ip4/ip4_protocol.cpp
+#         src/protocols/ip4/ip4_addr.cpp
+#         src/protocols/ip4/internet_checksum.cpp
+#         src/protocols/ip4/ip4_header.cpp
+
+#         src/protocols/tcp/tcp_protocol.cpp
+#         src/protocols/tcp/tcp_session.cpp
+#         src/protocols/tcp/tcp_boundary_preserving_session.cpp
+
+#         src/protocols/udp/udp_protocol.cpp
+#         src/protocols/udp/udp_header.cpp
+
+#         src/protocols/icmp/icmp_protocol.cpp
+#         src/protocols/icmp/icmp_header.cpp
+
+#         src/protocols/emp/emp_protocol.cpp
+# )
+
+set(LIB_SRC
+        lib/hexdump.h
+        lib/hexdump.cpp
+)
+
+set(LIB_LINUX_SRC
         lib/linux/hardware.h
         lib/linux/hardware.cpp
 
@@ -68,111 +97,115 @@ set(LINUX_SRC
         lib/linux/virtual_net.cpp
 )
 
-set(DIRECT_CONNECTIONS_SRC
-        src/direct_connections/udp/udp_client.cpp
-        src/direct_connections/udp/udp_server.cpp
+# set(DIRECT_CONNECTIONS_SRC
+#         src/direct_connections/udp/udp_client.cpp
+#         src/direct_connections/udp/udp_server.cpp
 
-        src/direct_connections/tcp/tcp_client.cpp
-        src/direct_connections/tcp/tcp_server.cpp
-        src/direct_connections/tcp/tcp_boundary_preserving_client.cpp
-        src/direct_connections/tcp/tcp_boundary_preserving_server.cpp
+#         src/direct_connections/tcp/tcp_client.cpp
+#         src/direct_connections/tcp/tcp_server.cpp
+#         src/direct_connections/tcp/tcp_boundary_preserving_client.cpp
+#         src/direct_connections/tcp/tcp_boundary_preserving_server.cpp
 
-        src/direct_connections/icmp/icmp_client.cpp
-        src/direct_connections/icmp/icmp_server.cpp
+#         src/direct_connections/icmp/icmp_client.cpp
+#         src/direct_connections/icmp/icmp_server.cpp
 
-        src/direct_connections/emp/emp_client.cpp
-        src/direct_connections/emp/emp_server.cpp
+#         src/direct_connections/emp/emp_client.cpp
+#         src/direct_connections/emp/emp_server.cpp
 
-)
+# )
 
-add_executable(test
-        ${ABSTRACT_SRC}
-        ${LINUX_SRC}
+# add_executable(test
+#         ${ABSTRACT_SRC}
+#         ${LINUX_SRC}
 
-        src/main/test/test.cpp
+#         src/main/test/test.cpp
 
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
+#         src/protocols/ether2/ethernet2_protocol.cpp
+#         src/protocols/ether2/ethernet2_header.cpp
+#         src/protocols/ether2/mac_addr.cpp
 
-        src/protocols/arp/arp_header.cpp
-        src/protocols/arp/arp_protocol.cpp
+#         src/protocols/arp/arp_header.cpp
+#         src/protocols/arp/arp_protocol.cpp
 
-        # src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
-        src/protocols/ip4/ip4_header.cpp
+#         # src/protocols/ip4/ip4_protocol.cpp
+#         src/protocols/ip4/ip4_addr.cpp
+#         src/protocols/ip4/internet_checksum.cpp
+#         src/protocols/ip4/ip4_header.cpp
 
-        src/tools/arp_tool/arp_tool.cpp
-)
+#         src/tools/arp_tool/arp_tool.cpp
+# )
 
-add_executable(vpn_daemon
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+# add_executable(vpn_daemon
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/main/vpn/vpn_daemon_main.cpp
-        src/tools/vpn/vpn_daemon.cpp
-)
+#         src/main/vpn/vpn_daemon_main.cpp
+#         src/tools/vpn/vpn_daemon.cpp
+# )
 
-add_executable(vpn_client
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+# add_executable(vpn_client
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/main/vpn/vpn_client_main.cpp
+#         src/main/vpn/vpn_client_main.cpp
 
-        src/tools/vpn/vpn_client.cpp
-)
-
-
-add_executable(remote_shell_util
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
-
-        src/main/remote_shell/remote_shell_util.cpp
-)
+#         src/tools/vpn/vpn_client.cpp
+# )
 
 
-add_executable(onion_network_node
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+# add_executable(remote_shell_util
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/main/onion_network/onion_network_node_main.cpp
-        src/tools/proxy/ip_proxy_server.cpp
-        src/tools/onion_network/onion_network_node.cpp
-)
+#         src/main/remote_shell/remote_shell_util.cpp
+# )
 
-add_executable(onion_network_client
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
 
-        src/main/onion_network/onion_network_client_main.cpp
-        src/tools/proxy/ip_proxy_client.h
-        src/tools/onion_network/onion_network_client.cpp
+# add_executable(onion_network_node
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/tools/ping/ping_util.cpp
-        src/tools/dns/dns_client.cpp
-        src/tools/dns/dns.cpp
-)
+#         src/main/onion_network/onion_network_node_main.cpp
+#         src/tools/proxy/ip_proxy_server.cpp
+#         src/tools/onion_network/onion_network_node.cpp
+# )
+
+# add_executable(onion_network_client
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
+
+#         src/main/onion_network/onion_network_client_main.cpp
+#         src/tools/proxy/ip_proxy_client.h
+#         src/tools/onion_network/onion_network_client.cpp
+
+#         src/tools/ping/ping_util.cpp
+#         src/tools/dns/dns_client.cpp
+#         src/tools/dns/dns.cpp
+# )
 
 
 add_executable(ping
         ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
+        ${PROT_ICMP_SRC}
+
+        src/tools/ping/ping_tool.cpp
 
         src/main/ping/ping.cpp
-        src/tools/ping/ping_util.cpp
 )
 
 add_executable(traceroute
@@ -186,48 +219,48 @@ add_executable(traceroute
 )
 
 
-add_executable(bandwidth
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+# add_executable(bandwidth
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/main/bandwidth/bandwidth.cpp
-        src/tools/bandwidth/bandwidth.cpp
-)
-
-
-add_executable(netcat
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
-
-        src/main/netcat/netcat.cpp
-)
+#         src/main/bandwidth/bandwidth.cpp
+#         src/tools/bandwidth/bandwidth.cpp
+# )
 
 
-add_executable(dns_server
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
+# add_executable(netcat
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
 
-        src/main/dns/dns_server.cpp
-        src/tools/dns/dns_server.cpp
-        src/tools/dns/dns.cpp
-)
+#         src/main/netcat/netcat.cpp
+# )
 
-add_executable(dns_client
-        ${ABSTRACT_SRC}
-        ${PROTOCOLS_SRC}
-        ${DIRECT_CONNECTIONS_SRC}
-        ${LINUX_SRC}
 
-        src/main/dns/dns_client.cpp
-        src/tools/dns/dns_client.cpp
-        src/tools/dns/dns.cpp
-)
+# add_executable(dns_server
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
+
+#         src/main/dns/dns_server.cpp
+#         src/tools/dns/dns_server.cpp
+#         src/tools/dns/dns.cpp
+# )
+
+# add_executable(dns_client
+#         ${ABSTRACT_SRC}
+#         ${PROTOCOLS_SRC}
+#         ${DIRECT_CONNECTIONS_SRC}
+#         ${LINUX_SRC}
+
+#         src/main/dns/dns_client.cpp
+#         src/tools/dns/dns_client.cpp
+#         src/tools/dns/dns.cpp
+# )
 
 
 
@@ -237,102 +270,63 @@ add_executable(dns_client
 
 add_executable(arp_scanner
         ${ABSTRACT_SRC}
-        ${LINUX_SRC}
-
-        src/main/arp_scanner/arp_scanner.cpp
-
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
-        src/protocols/ether2/ethertype.cpp
-
-        src/protocols/arp/arp_header.cpp
-        src/protocols/arp/arp_protocol.cpp
-
-        # src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
-        src/protocols/ip4/ip4_header.cpp
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
 
         src/tools/arp_tool/arp_tool.cpp
+
+        src/main/arp_scanner/arp_scanner.cpp
 )
 
 add_executable(arp_spoofer
         ${ABSTRACT_SRC}
-        ${LINUX_SRC}
-
-        src/main/arp_spoofer/arp_spoofer.cpp
-
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
-        src/protocols/ether2/ethertype.cpp
-
-        src/protocols/arp/arp_header.cpp
-        src/protocols/arp/arp_protocol.cpp
-
-        # src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
-        src/protocols/ip4/ip4_header.cpp
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
 
         src/tools/arp_tool/arp_tool.cpp
+
+        src/main/arp_spoofer/arp_spoofer.cpp
 )
 
 add_executable(netcat_local_ether2
         ${ABSTRACT_SRC}
-        ${LINUX_SRC}
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
 
         src/main/netcat/netcat_local_ether2.cpp
-
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
-        src/protocols/ether2/ethertype.cpp
-
-        src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
-        src/protocols/ip4/ip4_header.cpp
-
 )
 
 add_executable(netcat_local_ip4
         ${ABSTRACT_SRC}
-        ${LINUX_SRC}
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
 
         src/main/netcat/netcat_local_ip4.cpp
-
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
-        src/protocols/ether2/ethertype.cpp
-
-        src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_header.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
 )
 
 add_executable(net_analyzer
         ${ABSTRACT_SRC}
-        ${LINUX_SRC}
-
-        src/main/net_analyzer/net_analyzer.cpp
-
-        src/protocols/ether2/ethernet2_protocol.cpp
-        src/protocols/ether2/ethernet2_header.cpp
-        src/protocols/ether2/mac_addr.cpp
-        src/protocols/ether2/ethertype.cpp
-
-        src/protocols/arp/arp_header.cpp
-        src/protocols/arp/arp_protocol.cpp
-
-        src/protocols/ip4/ip4_protocol.cpp
-        src/protocols/ip4/ip4_header.cpp
-        src/protocols/ip4/ip4_addr.cpp
-        src/protocols/ip4/internet_checksum.cpp
+        ${LIB_SRC}
+        ${LIB_LINUX_SRC}
+        ${PROT_ETHER2_SRC}
+        ${PROT_ARP_SRC}
+        ${PROT_IP4_SRC}
 
         src/tools/net_analyzer/net_analyzer.cpp
+        src/tools/net_analyzer/parsed_packet.cpp
+
+        src/main/net_analyzer/net_analyzer.cpp
 )
 
